# KrishiRakshak-2.0

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RENAME_JUSTIFICATION.md  app.py  code_reviewer.py  config.yaml  pyproject.toml  requirements.txt
configs/: default.yaml
data/fixed_data/: class_weights.json  test.csv  val.csv
data/plantvillage/: class_weights.json  preprocessing_report.json  test.csv  test_balanced.csv  test_write.csv  train_balanced.csv  val.csv  val_balanced.csv
data/processed_data/: test.csv  val.csv
docs/: ARCHITECTURE.md  QUICKSTART.md  RENAME_JUSTIFICATION.md  hybrid_model_guide.md  journey.md
reports/: data_quality_report.json
scripts/: fix_dataset.py  preprocess_dataset.py  sanity_check.py  train.py
scripts/data/: generate_synthetic_ms.py  prepare_dataset.py  validate_dataset.py
src/: __init__.py  config.py  train.py
src/data/: datamodule.py  dataset.py
src/models/: __init__.py  base.py  hybrid.py  model.py  plant_model.py
src/utils/: __init__.py  advisory.py  callbacks.py  config.py  config_loader.py  gradcam.py  logger.py  metrics.py  model_export.py  seed.py  translations.py  utils.py  wandb_utils.py
src/web/: app.py
tests/: __init__.py  conftest.py  test_dataset.py  test_hybrid_model.py  test_model.py
